# e3-testsuite

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  NEWS.md  README.md  build_wheel.py  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yaml  install-mypy-deps.py
doc/: adacore.rst  api_classic.rst  api_control.rst  api_diff.rst  api_report.rst  api_result.rst  api_test_driver.rst  api_testcase_finder.rst  api_testsuite.rst  code_coverage.rst  conf.py  core_concepts.rst  index.rst  multiprocessing.rst  tutorial.rst
e3/testsuite/: __init__.py  driver.py  main.py  process.py  result.py
e3/testsuite/report/: xunit.py
src/e3/: __init__.py
src/e3/testsuite/: __init__.py  _helpers.py  control.py  driver.py  event_notifications.py  find_skipped_tests.py  fragment.py  main.py  multiprocess_scheduler.py  optfileparser.py  process.py  result.py  running_status.py  testcase_finder.py  utils.py
src/e3/testsuite/driver/: __init__.py  adacore.py  classic.py  diff.py
src/e3/testsuite/report/: display.py  gaia.py  index.py  rewriting.py  xunit.py
tests/: conftest.py  fix-coverage-paths.py  gen-cov-config.py
tests/coverage/: base.rc
tests/tests/: basic_test.py  env_printer.py  test_adacore.py  test_baseline_rewriting.py  test_basics.py  test_classic.py  test_diff.py  test_e3_test.py  test_find_skipped.py  test_list_json.py  test_multiprocessing.py  test_notify_events.py  test_optfileparser.py  test_outputs.py  test_report_display.py  test_report_gaia.py  test_running_status.py  test_xunit.py  ts_notify_hook.py  utils.py
tests/tests/classic-tests/: script.py
tests/tests/optfiles/: dead.opt  default_cmd.opt  required.opt  sharp_in_comment.opt  syntax_error.opt  syntax_error_2.opt  syntax_error_3.opt  tags.opt
tests/tests/test_gaia/: test_gaia.py
(+84 files in other folders)
