[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "e3-testsuite"
authors = [{name="AdaCore's IT Team"}]
dynamic = ["version"]
description = "E3 testsuite"
dependencies = ["e3-core"]
readme = "README.md"
license = {text = "GPLv3"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
]

[project.scripts]
e3-convert-xunit = "e3.testsuite.report.xunit:convert_main"
e3-find-skipped-tests = "e3.testsuite.find_skipped_tests:main"
e3-opt-parser = "e3.testsuite.optfileparser:eval_main"
e3-opt-check = "e3.testsuite.optfileparser:check_syntax_main"
e3-run-test-fragment = "e3.testsuite.fragment:run_fragment"
e3-test = "e3.testsuite.main:main"
e3-testsuite-report = "e3.testsuite.report.display:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
addopts = "--failed-first --e3"

[tool.mypy]
# Ensure mypy works with namespace in which there is no toplevel
# __init__.py. Explicit_package_bases means that that mypy_path
# will define which directory is the toplevel directory of the
# namespace.
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "coverage.*",
  "botocore.*",
  "boto3.*",
  "requests.*",
  "tqdm.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "e3.testsuite.*"
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
